[gd_scene load_steps=11 format=3 uid="uid://cjaqeadfhlt2x"]

[ext_resource type="Script" path="res://UI/inGameMenu/GameUI.gd" id="1_qh643"]
[ext_resource type="Texture2D" uid="uid://62jouqlqvrxe" path="res://assets/healthbars/helth bar arka.png" id="2_l3dl5"]
[ext_resource type="Texture2D" uid="uid://p03dwyb8v28y" path="res://assets/healthbars/helth bar kirmizi cerceve.png" id="3_sytfu"]
[ext_resource type="Texture2D" uid="uid://dpyuyq3pfxpen" path="res://assets/healthbars/helth bar kirmizi ic.png" id="4_b4y5x"]
[ext_resource type="Theme" uid="uid://7oiqebqmlnf4" path="res://assets/new_theme.tres" id="5_elssh"]
[ext_resource type="AudioStream" uid="uid://ooqwklxe2uws" path="res://assets/audio/music/main_menu.mp3" id="6_ng860"]

[sub_resource type="Animation" id="Animation_aqqsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InGameMenu/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.137255, 0.188235, 1)]
}

[sub_resource type="Animation" id="Animation_026c4"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InGameMenu/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.137255, 0.188235, 1), Color(0, 0.137255, 0.188235, 0)]
}

[sub_resource type="Animation" id="Animation_mel66"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InGameMenu/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.137255, 0.188235, 0), Color(0, 0.137255, 0.188235, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xixtq"]
_data = {
"RESET": SubResource("Animation_aqqsu"),
"fade_in": SubResource("Animation_026c4"),
"fade_out": SubResource("Animation_mel66")
}

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_qh643")
main_menu_path = "res://UI/MainMenu.tscn"

[node name="InGameMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_elssh")

[node name="ColorRect" type="ColorRect" parent="InGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_elssh")
color = Color(0, 0.137255, 0.188235, 1)

[node name="InGameContainer" type="MarginContainer" parent="InGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme = ExtResource("5_elssh")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="InGameMenu/InGameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("5_elssh")

[node name="QuitButton" type="Button" parent="InGameMenu/InGameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "quit"

[node name="TextureProgressBar" type="TextureProgressBar" parent="InGameMenu/InGameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
texture_under = ExtResource("2_l3dl5")
texture_over = ExtResource("3_sytfu")
texture_progress = ExtResource("4_b4y5x")

[node name="SettingsContainer" type="MarginContainer" parent="InGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="InGameMenu/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="InGameMenu/SettingsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 32
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0
text = "audio settings"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
text = "SFX

"

[node name="SFXSlider" type="HSlider" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="MarginContainer" type="MarginContainer" parent="InGameMenu/SettingsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "return to game"

[node name="SaveAndQuitButton" type="Button" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "save and quit"

[node name="QuitWOSaveButton" type="Button" parent="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "quit without save
"

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xixtq")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ng860")

[connection signal="button_down" from="InGameMenu/InGameContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="value_changed" from="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer2/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="button_down" from="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_button_down"]
[connection signal="button_down" from="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer/SaveAndQuitButton" to="." method="_on_save_and_quit_button_button_down"]
[connection signal="button_down" from="InGameMenu/SettingsContainer/VBoxContainer/MarginContainer/VBoxContainer/QuitWOSaveButton" to="." method="_on_quit_wo_save_button_button_down"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
